--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "lib": ["deno.window"],
+    "lib": ["deno.window", "deno.unstable"],
     "strict": true
   },
   "lint": {
     "files": {
-      "include": ["src/"]
+      "include": ["src/", "tests/"]
     },
     "rules": {
       "tags": ["recommended"]
@@ -14,12 +14,15 @@
   },
   "fmt": {
     "files": {
-      "include": ["src/"]
+      "include": ["src/", "tests/"]
     },
     "options": {
       "lineWidth": 100,
       "indentWidth": 2,
       "singleQuote": true
     }
+  },
+  "imports": {
+    "std/": "https://deno.land/std@0.208.0/"
   }
 } 
