--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
   "description": "A Deno library for managing application and user configurations",
   "author": "tettuan",
   "license": "MIT",
-  "exports": "./src/mod.ts",
+  "exports": "./mod.ts",
   "compilerOptions": {
     "strict": true,
     "allowJs": true,
