--- a/deno.json
+++ b/deno.json
@@ -1,13 +1,16 @@
 {
-  "name": "breakdownconfig",
+  "name": "@tettuan/breakdownconfig",
   "version": "1.0.0",
   "description": "A Deno library for managing application and user configurations",
   "author": "tettuan",
   "license": "MIT",
   "exports": "./mod.ts",
+  "publish": {
+    "include": ["src/", "mod.ts", "README.md", "LICENSE"],
+    "exclude": ["tests/", "tmp/", "docs/"]
+  },
   "compilerOptions": {
     "strict": true,
-    "allowJs": true,
     "lib": ["deno.window"],
     "types": ["deno"]
   },
@@ -28,7 +31,7 @@
     "std/": "https://deno.land/std@0.220.1/"
   },
   "tasks": {
-    "test": "deno test --allow-read --allow-write",
+    "test": "deno test --allow-read --allow-write --allow-env",
     "check": "deno check src/mod.ts",
     "lint": "deno lint",
     "fmt": "deno fmt"
