--- a/deno.json
+++ b/deno.json
@@ -28,7 +28,8 @@
     "proseWrap": "preserve"
   },
   "imports": {
-    "@std/path": "jsr:@std/path@^1.0.8"
+    "@std/path": "jsr:@std/path@1",
+    "@std/assert": "jsr:@std/assert@^1.0.11"
   },
   "tasks": {
     "test": "deno test --allow-read --allow-write --allow-env",
