--- a/deno.json
+++ b/deno.json
@@ -29,8 +29,10 @@
   },
   "imports": {
     "@std/path": "jsr:@std/path@1",
-    "@std/assert": "jsr:@std/assert@^1.0.11"
+    "@std/assert": "jsr:@std/assert@^1.0.11",
+    "@tettuan/breakdownlogger": "jsr:@tettuan/breakdownlogger@^0.1.10"
   },
+  "importMap": "./import_map.json",
   "tasks": {
     "test": "deno test --allow-read --allow-write --allow-env",
     "check": "deno check src/mod.ts",
