--- a/deno.json
+++ b/deno.json
@@ -10,32 +10,36 @@
     "exclude": ["tests/", "tmp/", "docs/"]
   },
   "compilerOptions": {
-    "strict": true,
-    "lib": ["deno.window"],
-    "types": ["deno"]
+    "lib": ["deno.window", "deno.ns"]
   },
   "lint": {
     "include": ["src/", "tests/"],
+    "exclude": ["README.md", "CHANGELOG.md"],
     "rules": {
       "tags": ["recommended"]
     }
   },
   "fmt": {
     "include": ["src/", "tests/"],
-    "lineWidth": 80,
+    "exclude": ["README.md", "CHANGELOG.md"],
     "indentWidth": 2,
-    "singleQuote": true,
-    "proseWrap": "preserve"
+    "lineWidth": 100,
+    "singleQuote": false
   },
   "imports": {
-    "@std/path": "jsr:@std/path@1",
-    "@std/assert": "jsr:@std/assert@^1.0.11",
+    "@std/": "jsr:@std/",
+    "@std/path": "jsr:@std/path@^0.220.1",
+    "@std/yaml": "jsr:@std/yaml@^0.220.1",
+    "@std/assert": "jsr:@std/assert@^0.220.1",
+    "@std/assert/assert_equals": "jsr:@std/assert@^0.220.1/assert_equals",
+    "@std/assert/assert_rejects": "jsr:@std/assert@^0.220.1/assert_rejects",
+    "@std/testing/bdd": "jsr:@std/testing@^0.220.1/bdd",
+    "@std/fs": "jsr:@std/fs@^0.220.1",
     "@tettuan/breakdownlogger": "jsr:@tettuan/breakdownlogger@^0.1.10"
   },
-  "importMap": "./import_map.json",
   "tasks": {
     "test": "deno test --allow-read --allow-write --allow-env",
-    "check": "deno check src/mod.ts",
+    "check": "deno check **/*.ts",
     "lint": "deno lint",
     "fmt": "deno fmt"
   }
