test: fix test failures and improve error handling
- Fix test failures in basic config loader tests - Update path resolution tests to match actual configuration - Add @std/expect for better error message testing - Improve error handling in config loading tests - Remove test_config directory in favor of temporary test directories - Update test utilities for better test isolation

--- a/deno.json
+++ b/deno.json
@@ -35,6 +35,7 @@
     "@std/assert/assert_rejects": "jsr:@std/assert@^0.220.1/assert_rejects",
     "@std/testing/bdd": "jsr:@std/testing@^0.220.1/bdd",
     "@std/fs": "jsr:@std/fs@^0.220.1",
+    "@std/expect": "jsr:@std/expect@^0.220.1",
     "@tettuan/breakdownlogger": "jsr:@tettuan/breakdownlogger@^0.1.10"
   },
   "tasks": {
