--- a/deno.json
+++ b/deno.json
@@ -27,15 +27,15 @@
     "singleQuote": false
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert",
-    "@std/assert/assert_equals": "jsr:@std/assert/equals",
-    "@std/assert/assert_rejects": "jsr:@std/assert/rejects",
+    "@std/assert": "jsr:@std/assert@^0.224.0",
+    "@std/assert/assert_equals": "jsr:@std/assert/equals@^0.224.0",
+    "@std/assert/assert_rejects": "jsr:@std/assert/rejects@^0.224.0",
     "@std/testing": "jsr:@std/testing@^0.224.0",
-    "@std/testing/bdd": "jsr:@std/testing/bdd",
-    "@std/path": "jsr:@std/path",
-    "@std/yaml": "jsr:@std/yaml",
-    "@std/fs": "jsr:@std/fs",
-    "@std/expect": "jsr:@std/expect",
+    "@std/testing/bdd": "jsr:@std/testing/bdd@^0.224.0",
+    "@std/path": "jsr:@std/path@^0.224.0",
+    "@std/yaml": "jsr:@std/yaml@^0.224.0",
+    "@std/fs": "jsr:@std/fs@^0.224.0",
+    "@std/expect": "jsr:@std/expect@^0.224.0",
     "@tettuan/breakdownlogger": "jsr:@tettuan/breakdownlogger@^0.1.10"
   },
   "tasks": {
