--- a/deno.json
+++ b/deno.json
@@ -28,10 +28,10 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^0.224.0",
-    "@std/assert/assert_equals": "jsr:@std/assert/equals@^0.224.0",
-    "@std/assert/assert_rejects": "jsr:@std/assert/rejects@^0.224.0",
+    "@std/assert/assert_equals": "jsr:@std/assert@^0.224.0/assert-equals",
+    "@std/assert/assert_rejects": "jsr:@std/assert@^0.224.0/assert-rejects",
     "@std/testing": "jsr:@std/testing@^0.224.0",
-    "@std/testing/bdd": "jsr:@std/testing/bdd@^0.224.0",
+    "@std/testing/bdd": "jsr:@std/testing@^0.224.0/bdd",
     "@std/path": "jsr:@std/path@^0.224.0",
     "@std/yaml": "jsr:@std/yaml@^0.224.0",
     "@std/fs": "jsr:@std/fs@^0.224.0",
