--- a/deno.json
+++ b/deno.json
@@ -1,27 +1,53 @@
 {
   "name": "@tettuan/breakdownconfig",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A Deno library for managing application and user configurations",
   "author": "tettuan",
   "license": "MIT",
   "exports": "./mod.ts",
   "publish": {
-    "include": ["src/", "mod.ts", "README.md", "LICENSE"],
-    "exclude": ["tests/", "tmp/", "docs/"]
+    "include": [
+      "src/",
+      "mod.ts",
+      "README.md",
+      "LICENSE"
+    ],
+    "exclude": [
+      "tests/",
+      "tmp/",
+      "docs/"
+    ]
   },
   "compilerOptions": {
-    "lib": ["deno.window", "deno.ns"]
+    "lib": [
+      "deno.window",
+      "deno.ns"
+    ]
   },
   "lint": {
-    "include": ["src/", "tests/"],
-    "exclude": ["README.md", "CHANGELOG.md"],
+    "include": [
+      "src/",
+      "tests/"
+    ],
+    "exclude": [
+      "README.md",
+      "CHANGELOG.md"
+    ],
     "rules": {
-      "tags": ["recommended"]
+      "tags": [
+        "recommended"
+      ]
     }
   },
   "fmt": {
-    "include": ["src/", "tests/"],
-    "exclude": ["README.md", "CHANGELOG.md"],
+    "include": [
+      "src/",
+      "tests/"
+    ],
+    "exclude": [
+      "README.md",
+      "CHANGELOG.md"
+    ],
     "indentWidth": 2,
     "lineWidth": 100,
     "singleQuote": false
@@ -44,4 +70,4 @@
     "lint": "deno lint",
     "fmt": "deno fmt"
   }
-} 
+}
