--- a/deno.json
+++ b/deno.json
@@ -42,7 +42,8 @@
   "fmt": {
     "include": [
       "src/",
-      "tests/"
+      "tests/",
+      "mod.ts"
     ],
     "exclude": [
       "README.md",
@@ -50,7 +51,10 @@
     ],
     "indentWidth": 2,
     "lineWidth": 100,
-    "singleQuote": false
+    "singleQuote": false,
+    "proseWrap": "preserve",
+    "semiColons": true,
+    "useTabs": false
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^0.224.0",
