--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           deno-version: v2.x
 
+      - name: Run tests
+        run: |
+          # Run tests from src directory first
+          deno test --allow-read --allow-write --allow-env src/*_test.ts
+          # Then run tests from tests directory
+          deno test --allow-read --allow-write --allow-env tests/**/*_test.ts
+
       - name: Verify formatting
         run: deno fmt --check
 
@@ -25,7 +32,4 @@ jobs:
         run: deno lint
 
       - name: Type check
-        run: deno check src/mod.ts
-
-      - name: Run tests
-        run: deno test --allow-read --allow-write --allow-env 
+        run: deno check src/mod.ts 
