--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,7 @@ jobs:
           deno-version: v2.x
 
       - name: Run tests
-        run: |
-          # Run tests from src directory first
-          deno test --allow-read --allow-write --allow-env src/*_test.ts
-          # Then run tests from tests directory
-          deno test --allow-read --allow-write --allow-env tests/**/*_test.ts
+        run: deno test --allow-read --allow-write --allow-env tests/**/*_test.ts
 
       - name: Verify formatting
         run: deno fmt --check
