exclude test files from src/ directory in publish

--- a/deno.json
+++ b/deno.json
@@ -15,7 +15,9 @@
     "exclude": [
       "tests/",
       "tmp/",
-      "docs/"
+      "docs/",
+      "src/**/*_test.ts",
+      "src/**/*.test.ts"
     ]
   },
   "compilerOptions": {
