--- a/examples/config-example/breakdown/config/app.yml
+++ b/examples/config-example/breakdown/config/app.yml
@@ -13,7 +13,7 @@ paths:
   data: "./data"
   logs: "./logs"
 
-working_dir: "./.agent/clipmt"
+working_dir: "./.agent/climpt"
 app_prompt:
   base_dir: "./prompts/app"
 app_schema:
